crates/squawk_parser/tests/snapshots/tests__alter_large_object_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/alter_large_object.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  ALTER_LARGE_OBJECT
    ALTER_KW "alter"
    WHITESPACE " "
    LARGE_KW "large"
    WHITESPACE " "
    OBJECT_KW "object"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "12345"
    WHITESPACE " "
    OWNER_KW "owner"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        IDENT "u"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- current_role"
  WHITESPACE "\n"
  ALTER_LARGE_OBJECT
    ALTER_KW "alter"
    WHITESPACE " "
    LARGE_KW "large"
    WHITESPACE " "
    OBJECT_KW "object"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "12345"
    WHITESPACE " "
    OWNER_KW "owner"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    ROLE_REF
      ROLE_REF_CURRENT_ROLE
        CURRENT_ROLE_KW "current_role"
    SEMICOLON ";"
  WHITESPACE "\n\n"
